# crypto_pipeline_sprint

./: README.md  ingest.py  main.py  models.py  pyproject.toml
.dlt/: secrets.toml
.github/workflows/: daily_pipeline.yml  main.yml
analytics/: dbt_project.yml  package-lock.yml  packages.yml
analytics/macros/: is_incremental_filters.sql
analytics/models/: schema.ymlsd
analytics/models/marts/: coin_trends.sql  schema.ymls
analytics/models/staging/: __sources.yml  stg__prices.sql
analytics/tests/: assert_prices_are_not_negative.sql  assert_valid_price_range.sql
webapp/: dashbord.py
